-table header in the cart for the select checkbox is now rendered like other checkboxes. -fix for attribute control not always turning off -fix for reference to old map function in shareCart -fix for odd menu behavior in chrome -fix for new color picker...shared state value was causing a problem -fix for mapIt...filter didn't check for value of select checkbox -removed duplicate column configuration info from cartTable -color picker is now more self-contained -reformatted some css and js files for easier reading

--- a/geoportal_1/src/main/webapp/resources/css/dialogs.css
+++ b/geoportal_1/src/main/webapp/resources/css/dialogs.css
@@ -181,13 +181,13 @@ span.columnNote {
 
 
 #owsServicesArea .sub_headerTitle {
-	margin-left: 0px;
+	margin-left: 0;
 }
 
 .sub_headerTitle {
   margin-left: 20px;
   color: #003366;
-  font-family: Trebuchet MS;
+	font-family: Trebuchet MS, arial, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 25px;
