--- a/geoportal_1/src/main/webapp/resources/css/layerTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/layerTable.css
@@ -1,62 +1,57 @@
-
 /********
 layer view
 *********/
 
-
 .expandControl {
-	height: 17px;
-	width: 11px;
+    height: 17px;
+    width: 11px;
 }
 
 .expanded {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -92px -115px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -92px -115px transparent;
 }
 
 .notExpanded {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -83px -63px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -83px -63px transparent;
 }
 
-
+div.cartCheckBox.button > label > div.checkBox {
+    margin-left: -2px;
+}
 
 .saveControl {
-	height: 17px;
-	width: 17px;
+    height: 17px;
+    width: 17px;
 }
 
 .notInCart {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -102px -13px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -102px -13px transparent;
 }
 
 .inCart {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -130px -13px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -130px -13px transparent;
 }
 
 .viewLibraryRecordControl {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -131px -35px
-		transparent;
-	height: 17px;
-	width: 17px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -131px -35px transparent;
+    height: 17px;
+    width: 17px;
 }
 
 .viewMetadataControl {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -131px -35px
-		transparent;
-	height: 17px;
-	width: 17px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -131px -35px transparent;
+    height: 17px;
+    width: 17px;
 }
 
 input[type=checkbox] {
-	display: none;
+    display: none;
 }
 
 input[type=checkbox] + label > div.checkLabel {
     padding-left: 3px;
     display: inline-block;
+    vertical-align: bottom;
 }
 
 input[type=checkbox] + label > div.checkBox {
@@ -64,8 +59,8 @@ input[type=checkbox] + label > div.checkBox {
     width: 25px;
     height: 15px;
     margin-left: 7px;
-    margin-bottom: -2px;
     display: inline-block;
+    vertical-align: bottom;
 }
 
 input[type=checkbox]:checked + label > div.checkBox {
@@ -73,36 +68,33 @@ input[type=checkbox]:checked + label > div.checkBox {
 }
 
 .checkOff {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -89px
-		transparent;
-	width: 25px;
-	height: 17px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -61px -89px transparent;
+    width: 25px;
+    height: 17px;
 }
 
 .checkOn {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -84px -89px
-		transparent;
-	width: 25px;
-	height: 17px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -84px -89px transparent;
+    width: 25px;
+    height: 17px;
 }
 
 .loginButton {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -67px -12px
-		transparent;
-	width: 25px;
-	height: 17px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -67px -12px transparent;
+    width: 25px;
+    height: 17px;
 }
 
 .previewLink {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -110px -89px rgba(0, 0, 0, 0);
+    background: url("../media/ogp-sprite.png") no-repeat scroll -110px -89px rgba(0, 0, 0, 0);
     height: 17px;
     width: 25px;
 }
 
 .previewNA {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -13px rgba(0, 0, 0, 0);
-	height: 17px;
-	width: 25px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -31px -13px rgba(0, 0, 0, 0);
+    height: 17px;
+    width: 25px;
 }
 
 .previewedLayers {
@@ -110,28 +102,25 @@ input[type=checkbox]:checked + label > div.checkBox {
 }
 
 .previewedLayers > div {
-	border-bottom: 1px solid #CCCCCC !important;
+    border-bottom: 1px solid #CCCCCC !important;
 }
 
 .highlight_row {
-	background-color: #edf4fa;
+    background-color: #edf4fa;
 }
-
-
 
 /**************
 Backbone table view
 ***************/
 
 .cartIconTable {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -102px -62px
-		transparent;
-	height: 17px;
-	width: 17px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -102px -62px transparent;
+    height: 17px;
+    width: 17px;
 }
 
 .tableWrapper {
-	font-family: Verdana,Geneva,sans-serif;
+    font-family: Verdana, Geneva, sans-serif;
 }
 
 .tableHeaders {
@@ -141,29 +130,29 @@ Backbone table view
 }
 
 .rowContainer {
-	overflow-y: auto;	
-	overflow-x: hidden;
-	white-space: nowrap;
+    overflow-y: auto;
+    overflow-x: hidden;
+    white-space: nowrap;
 }
 
 #searchResults > .tableWrapper > .rowContainer {
-	overflow-y: scroll;
+    overflow-y: scroll;
 }
 
 .hiddenRow {
-	display: none;
+    display: none;
 }
 
 .hiddenTable {
-	display: none;
+    display: none;
 }
 
 .previewedLayers .rowContainer {
-	overflow: visible;
+    overflow: visible;
 }
 
 .tableRow {
-	width: 100%;
+    width: 100%;
     padding-top: 2px;
     padding-bottom: 2px;
 }
@@ -190,21 +179,21 @@ Backbone table view
 }
 
 .rowContainer .tableCell {
-	    height: 17px;
-	    color: #4E4E4E;
-	    overflow: hidden;
-    	padding: 2px 4px 2px 3px;
+    height: 17px;
+    color: #4E4E4E;
+    overflow: hidden;
+    padding: 2px 4px 2px 3px;
 }
 
 .tableCell > div {
-	margin: auto;
+    margin: auto;
 }
 
 /* text columns */
 
 .tableCell > .cellWrapper {
-	width: 100%;
-	margin-left: 2px;
+    width: 100%;
+    margin-left: 2px;
     margin-right: 2px;
     overflow: hidden;
     font-size: 11px;
@@ -216,19 +205,19 @@ Backbone table view
 }
 
 td.colTitle {
-	cursor: pointer;
-	color: #000000 !important;
+    cursor: pointer;
+    color: #000000 !important;
 }
 
 .rowContainer .colTitle .cellWrapper {
-	cursor: pointer;
-	color: #000000;
+    cursor: pointer;
+    color: #000000;
 }
 
 .tableRow.rowHover {
-	background-color: #ebf6ff;
-	border-bottom: #d8e8fa 1px solid !important;
-	border-top: #d8e8fa 1px solid !important;
+    background-color: #ebf6ff;
+    border-bottom: #d8e8fa 1px solid !important;
+    border-top: #d8e8fa 1px solid !important;
     padding-top: 1px;
     padding-bottom: 1px;
 }
@@ -238,16 +227,16 @@ td.colTitle {
     text-align: center;
 }
 
-.tableRow.cartAction  {
-	opacity: .6;
+.tableRow.cartAction {
+    opacity: .6;
 }
 
 .tableRow.cartAction.cartSelected {
-	opacity: 1;
-	background-color: #CDE4FA;
-	border-color: #CDE4FA;
+    opacity: 1;
+    background-color: #CDE4FA;
+    border-color: #CDE4FA;
 }
 
 .bottomSpacer {
-	height: 25px;
+    height: 300px;
 }
