--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -8,9 +8,7 @@
 }
 
 .map_expanded {
-	/*width: 1000px !important;*/
 	z-index: 500;
-	/*position:absolute;*/
 }
 
 .clearfloats {
@@ -86,11 +84,10 @@
 	height: 20px;
 	width: auto;
 	padding: 0 2px;
-	/*background: #cccccc url(../media/bg_grayfade.png)  repeat-x;*/
 	background: #FFFFFF;
 	color: #666666;
 	border: 1px solid #AEAEAE;
-	font-family: tahoma;
+    font-family: tahoma, arial, sans-serif;
 	font-size: 12px;
 	-moz-border-radius: 4px 4px 4px 4px;
 	border-radius: 4px 4px 4px 4px;
@@ -113,7 +110,7 @@
     margin: 3px;
     padding: 0 2px 3px 1px;
     width: 26px;
-    visibility: none;
+    display: none;
     -moz-box-shadow: 2px 5px 4px -1px #777777;
 	-webkit-box-shadow: 2px 5px 4px -1px #777777;
 	box-shadow: 2px 5px 4px -1px #777777;
@@ -122,7 +119,7 @@
 
 div.olControlMousePosition {
 	background: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.05));
-    background: -moz-linear-gradient(left center , rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.05)) repeat scroll 0 0 rgba(255, 255, 255, 0);
+    background: -moz-linear-gradient(right, rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.05)) repeat scroll 0 0 rgba(255, 255, 255, 0);
     height: 19px;
     line-height: 19px;
     padding-left: 15px;
@@ -130,13 +127,6 @@ div.olControlMousePosition {
     left: 25px;
     right: auto !important;
 }
-
-/*#geoportalMap {
-	margin: 0px;
-	padding: 0px;
-	opacity: 0;
-}*/
-
 
 .olControlAttribution {
     bottom: 0 !important;
@@ -158,9 +148,6 @@ div.olControlMousePosition {
 	top: 5px;
 }
 
-/*.olImageLoadError_custom {
-	display: none;
-}*/
 .olControlPanel div {
 	float: left;
 }
@@ -181,20 +168,19 @@ div.olControlMousePosition {
 }
 
 .olControlOverviewMapMinimizeButton {
-	right: 0px;
-	bottom: 0px;
+    right: 0;
+    bottom: 0;
 	cursor: pointer;
 }
 
 .olControlOverviewMapMaximizeButton {
-	right: 0px;
-	bottom: 0px;
+    right: 0;
+    bottom: 0;
 	cursor: pointer;
 }
 
 .olControlOverviewMapExtentRectangle {
 	overflow: hidden;
-	/*background-image: url("img/blank.gif");*/
 	cursor: move;
 	border: 2px dotted red;
 }
@@ -202,7 +188,6 @@ div.olControlMousePosition {
 .olControlOverviewMapRectReplacement {
 	overflow: hidden;
 	cursor: move;
-	background-image: url("img/overview_replacement.gif");
 	background-repeat: no-repeat;
 	background-position: center;
 }
@@ -333,9 +318,9 @@ div.olControlMousePosition {
 	background-color: #ffffff;
 	border: 1px solid #555555;
 	z-index: 9;
-	-moz-box-shadow: 3px 0px 5px -1px #777777;
-	-webkit-box-shadow: 3px 0px 5px -1px #777777;
-	box-shadow: 3px 0px 5px -1px #777777;
+    -moz-box-shadow: 3px 0 5px -1px #777777;
+    -webkit-box-shadow: 3px 0 5px -1px #777777;
+    box-shadow: 3px 0 5px -1px #777777;
 }
 
 .olHandlerBoxZoomBox {
@@ -356,15 +341,6 @@ div.olControlMousePosition {
 	filter: alpha(opacity = 50);
 }
 
-/*.olControlPanPanel {
-	top: 37px;
-	left: 5px;
-	width: 41px;
-	height: 41px;
-	background: url("../media/panarrows_bg.png") no-repeat scroll 0 0
-		transparent;
-}*/
-
 .olControlPanPanel div {
 	cursor: pointer;
 	position: absolute;
@@ -372,82 +348,10 @@ div.olControlMousePosition {
 	height: 41px;
 }
 
-/*.olControlPanPanel .olControlPanNorthItemInactive {
-	width: 18px;
-	height: 18px;
-	top: 2px;
-	left: 13px;
-	background: url("../media/pandarrows_north.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanSouthItemInactive {
-	width: 18px;
-	height: 18px;
-	top: 30px;
-	left: 13px;
-	background: url("../media/pandarrows_south.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanWestItemInactive {
-	width: 18px;
-	height: 18px;
-	top: 15px;
-	left: 2px;
-	background: url("../media/pandarrows_west.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanEastItemInactive {
-	width: 18px;
-	height: 18px;
-	top: 15px;
-	left: 28px;
-	background: url("../media/pandarrows_east.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanNorth {
-	width: 18px;
-	height: 18px;
-	top: 2px;
-	left: 13px;
-	background: url("../media/pandarrows_north.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanSouth {
-	width: 18px;
-	height: 18px;
-	top: 30px;
-	left: 13px;
-	background: url("../media/pandarrows_south.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanWest {
-	width: 18px;
-	height: 18px;
-	top: 15px;
-	left: 2px;
-	background: url("../media/pandarrows_west.png") no-repeat scroll 0 0
-		transparent;
-}
-
-.olControlPanPanel .olControlPanEast {
-	width: 18px;
-	height: 18px;
-	top: 15px;
-	left: 28px;
-	background: url("../media/pandarrows_east.png") no-repeat scroll 0 0
-		transparent;
-}*/
-
 .olControlZoomPanel .olControlZoomOutItemInactive {
 	top: 36px;
-	left: 0px;
-	background-position: 0px 0px;
+    left: 0;
+    background-position: 0 0;
 }
 
 .olImageLoadError {
@@ -461,7 +365,7 @@ div.olControlMousePosition {
 }
 
 .olControlModPanZoomBar {
-	top: 0px !important;
+    top: 0 !important;
 	left: 25px !important;
 }
 
