--- a/geoportal_1/src/main/webapp/resources/css/search.css
+++ b/geoportal_1/src/main/webapp/resources/css/search.css
@@ -46,13 +46,6 @@
 	margin-top: -3px;
 }
 
-.basicSearch {
-	display: inline-block;
-	line-height: 22px;
-	padding-right: 6px;
-	width: 306px;
-}
-
 .labelText {
 	padding-right: 5px;
 }
@@ -68,6 +61,10 @@
 
 .whereBox.basicSearch>label {
 	width: 55px;
+}
+
+.searchFormRow {
+    height: 27px;
 }
 
 .basicSearch.whatBox.searchFormRow>label {
@@ -87,20 +84,15 @@
 }
 
 #basicSearchMapFilterContainer {
-	display: none;
 	margin-top: 5px;
 	display: inline-block;
 	visibility: hidden;
 }
 
-.searchFormRow {
-	line-height: 27px;
-}
-
 .searchFormRow>label {
 	display: inline-block;
 	width: 76px;
-	font-family: arial;
+    font-family: arial, sans-serif;
 	font-size: 14px;
 }
 
