--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -215,103 +215,86 @@ div.olControlMousePosition {
 }
 
 .olControlNavigationHistoryPreviousItemActive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -139px
-		transparent !important;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -31px -139px transparent !important;
 }
 
 .olControlNavigationHistoryPreviousItemActive:hover {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -183px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -31px -183px transparent;
 }
 
 .olControlNavigationHistoryPreviousItemInactive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -139px
-		transparent !important;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -31px -139px transparent !important;
 }
 
 .olControlNavigationHistoryNextItemActive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -139px
-		transparent !important;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -61px -139px transparent !important;
 }
 
 .olControlNavigationHistoryNextItemActive:hover {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -183px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -61px -183px transparent;
 }
 
 .olControlNavigationHistoryNextItemInactive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -139px
-		transparent !important;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -61px -139px transparent !important;
 }
 
 .olControlPanel .olControlNavigationItemActive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -122px
-		-183px transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -122px -183px transparent;
 	width: 38px;
 	height: 38px;
 	cursor: pointer;
 }
 
 .olControlPanel .olControlNavigationItemInactive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -122px
-		-139px transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -122px -139px transparent;
 	width: 38px;
 	height: 38px;
 	cursor: pointer;
 }
 
 .olControlPanel .olControlNavigationItemInactive:hover {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -122px
-		-183px transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -122px -183px transparent;
 }
 
 .olControlPanel .olControlZoomBoxItemActive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -91px -183px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -91px -183px transparent;
 	width: 31px;
 	height: 38px;
 	cursor: pointer;
 }
 
 .olControlPanel .olControlZoomBoxItemInactive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -91px -139px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -91px -139px transparent;
 	width: 31px;
 	height: 38px;
 	cursor: pointer;
 }
 
 .olControlPanel .olControlZoomBoxItemInactive:hover {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -91px -183px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -91px -183px transparent;
 }
 
 .olControlPanel .olControlZoomToMaxExtentItemInactive {
-	background: url("../media/ogp-sprite.png") no-repeat scroll 0 -139px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll 0 -139px transparent;
 	width: 31px;
 	height: 38px;
 	cursor: pointer;
 }
 
 .olControlPanel .olControlZoomToMaxExtentItemInactive:hover {
-	background: url("../media/ogp-sprite.png") no-repeat scroll 0 -183px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll 0 -183px transparent;
 }
 
 .zoomPlus {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -165px -12px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -165px -12px transparent;
 }
 
 .zoomMinus {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -165px
-		-240px transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -165px -240px transparent;
 }
 
 .zoomSlideBar {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -170px -30px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -170px -30px transparent;
 }
 
 .zoomSlider {
