--- a/geoportal_1/src/main/webapp/resources/css/previewControls.css
+++ b/geoportal_1/src/main/webapp/resources/css/previewControls.css
@@ -7,68 +7,66 @@ preview controls
 }
 
 .previewControls > div {
-	display: inline-block;
+    display: inline-block;
     vertical-align: top;
-	height: 17px;
-	position: relative;
+    height: 17px;
+    position: relative;
 }
 
-.sliderControl>div {
-	color: #231F20;
-	background-color: #FFFFFF;
-	z-index: 10;
+.sliderControl > div {
+    color: #231F20;
+    background-color: #FFFFFF;
+    z-index: 10;
 }
 
 .sliderDisplay {
-	font-size: 10px;
-	border: 1px solid #aaaaaa;
+    font-size: 10px;
+    border: 1px solid #aaaaaa;
     border-radius: 2px 0 0 2px;
     padding: 0 2px 2px 5px;
     height: 12px;
-	display: inline-block;
+    display: inline-block;
 }
 
 .sliderArrow {
-    background: url("../media/ogp-sprite.png") no-repeat scroll -65px -65px
-		transparent;
-	border-bottom: 1px solid #aaaaaa;
-	border-radius: 0 3px 3px 0;
-	border-right: 1px solid #aaaaaa;
-	border-top: 1px solid #aaaaaa;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -65px -65px transparent;
+    border-bottom: 1px solid #aaaaaa;
+    border-radius: 0 3px 3px 0;
+    border-right: 1px solid #aaaaaa;
+    border-top: 1px solid #aaaaaa;
     height: 14px;
-	width: 14px;
-	display: inline-block;
-	position: relative;
+    width: 14px;
+    display: inline-block;
+    position: relative;
     vertical-align: bottom;
     left: -4px;
 }
 
 .controlContainer {
-	position: absolute;
-	border: 1px solid #aaaaaa;
-	background: white;
-	height: 11px;
-	width: 71px;
-	padding: 5px 10px 5px 8px;
-	right: 4px;
-	display: none;
+    position: absolute;
+    border: 1px solid #aaaaaa;
+    background: white;
+    height: 11px;
+    width: 71px;
+    padding: 5px 10px 5px 8px;
+    right: 4px;
+    display: none;
     box-shadow: 1px 1px 3px -1px #555555;
 }
 
 .controlText {
-	height: 13px;
-	display: inline-block;
-	font-size: 10px;
+    height: 13px;
+    display: inline-block;
+    font-size: 10px;
     padding: 0 1px;
 }
 
-
 .colorControl {
-	width: 12px;
-	height: 12px;
-	border: 1px solid #aaaaaa;
-	display: inline-block;
-	-moz-border-radius: 1px;
+    width: 12px;
+    height: 12px;
+    border: 1px solid #aaaaaa;
+    display: inline-block;
+    -moz-border-radius: 1px;
 }
 
 .picker {
@@ -129,8 +127,8 @@ div.colorCell.colorCellSelected {
 }
 
 .sizeControlCell .sliderLabel {
-	display: inline-block;
-	width: 50px;
+    display: inline-block;
+    width: 50px;
 }
 
 .opacityControlCell {
@@ -138,9 +136,9 @@ div.colorCell.colorCellSelected {
 }
 
 .opacityControlCell .sliderValue {
-	display: inline-block;
-	width: 19px;
-	text-align: right;
+    display: inline-block;
+    width: 19px;
+    text-align: right;
 }
 
 .sizeControlCell {
@@ -166,26 +164,23 @@ div.colorCell.colorCellSelected {
 
 .zoomToLayerControl {
     left: 86px;
-	background: url("../media/ogp-sprite.png") no-repeat scroll -9px -90px
-		transparent;
-	height: 17px;
-	width: 17px;
-	top: 1px;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -9px -90px transparent;
+    height: 17px;
+    width: 17px;
+    top: 1px;
 }
 
 .attributeInfoControl {
     left: 115px;
-	height: 17px;
-	width: 17px;
-	top: 1px;
+    height: 17px;
+    width: 17px;
+    top: 1px;
 }
 
 .attributeInfoControlOn {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -115px
-		-115px transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -115px -115px transparent;
 }
 
 .attributeInfoControlOff {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -36px -90px
-		transparent;
+    background: url("../media/ogp-sprite.png") no-repeat scroll -36px -90px transparent;
 }
