--- a/geoportal_1/src/main/webapp/resources/css/infoBubble.css
+++ b/geoportal_1/src/main/webapp/resources/css/infoBubble.css
@@ -1,7 +1,7 @@
 
 .welcomeText {
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 0;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -44,6 +44,10 @@ button.closeBubble {
 .infoBubbleText label {
     color: white;
     font: 12px "Univers", Sans-Serif;
+}
+
+.infoBubbleText .doNotShow {
+    padding-left: 20px;
 }
 
 .triangle-isosceles.top-arrow:after {
