-add wro group to handle javascript library resources to minimize number of javascript file downloads -alter WroResourceRetriever to handle multiple wro groups

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -4,12 +4,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/backbonejs/1.1.2/backbone-min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-<spring:url value="/resources/javascript/jquery.scrollTo-min.js" var="scroll_url" htmlEscape="true"/>
-<script src="${scroll_url}"></script>
-<spring:url value="/resources/javascript/spinners/spinners/spinners.min.js" var="spin_url" htmlEscape="true"/>
-<script src="${spin_url}"></script>
-<spring:url value="/resources/javascript/jquery.ba-postmessage.min.js" var="pm_url" htmlEscape="true"/>
-<script src="${pm_url}"></script>
+
 <spring:url value="/resources/javascript/openlayers/OpenLayers-2.13.1/OpenLayers.js" var="ol_url" htmlEscape="true"/>
 <script src="${ol_url}"></script>
 <spring:url value="/resources/javascript/openlayers/custom/PanZoomBar.js" var="olpan_url" htmlEscape="true"/>
@@ -29,9 +24,15 @@ if (!Object.create) {
 }
 </script>
 
+
 <c:choose>
+
       <c:when test="${dev}" >
-      
+          <c:forEach var="lib_style" items="${libCss}">
+              <spring:url value="${lib_style}" var="libcss_url" htmlEscape="true"/>
+              <link rel="stylesheet" href="${libcss_url}" type="text/css"/>
+          </c:forEach>
+
 		<c:forEach var="style" items="${devCss}">
             <spring:url value="${style}" var="devcss_url" htmlEscape="true"/>
             <link rel="stylesheet" href="${devcss_url}" type="text/css"/>
@@ -40,14 +41,23 @@ if (!Object.create) {
       </c:when>
 
       <c:otherwise>
+          <spring:url value="/wro/lib.css" var="libcss_url" htmlEscape="true"/>
+          <link rel="stylesheet" href="${libcss_url}" type="text/css"/>
+
           <spring:url value="/wro/ogp.css" var="css_url" htmlEscape="true"/>
           <link rel="stylesheet" href="${css_url}" type="text/css"/>
      
       </c:otherwise>
 </c:choose>
 
+
 <c:choose>
     <c:when test="${dev}">
+
+        <c:forEach var="libcode" items="${libJs}">
+            <spring:url value="${libcode}" var="libjs_url" htmlEscape="true"/>
+            <script type="text/javascript" src="${libjs_url}"></script>
+        </c:forEach>
 
         <c:forEach var="code" items="${devJs}">
             <spring:url value="${code}" var="devjs_url" htmlEscape="true"/>
@@ -57,6 +67,10 @@ if (!Object.create) {
     </c:when>
 
     <c:otherwise>
+        <spring:url value="/wro/lib.js" var="libjs_url" htmlEscape="true"/>
+
+        <script type="text/javascript" src="${libjs_url}"></script>
+
         <spring:url value="/wro/ogp.js" var="js_url" htmlEscape="true"/>
 
         <script type="text/javascript" src="${js_url}"></script>
