--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
@@ -4,9 +4,9 @@
 		<div id="logoGraphic"></div><div class="logoText">${titlePrimary}</div> <div class="logoText offsetColor">${titleOffset}</div>
 	</div>
 	<div id="top_menu">
-		<button class="reset button headerButton">Reset</button> 
-		<span class="separator">|</span> 
-		<button id="userGuideLink" class="infoLinks button headerButton">Help</button>
+		<button class="reset button headerButton">Reset</button>
+		<%--		<span class="separator">|</span>
+                <button id="userGuideLink" class="infoLinks button headerButton">Help</button>--%>
 		<span class="separator">|</span> 
 		<button id="aboutLink" class="infoLinks button headerButton">About</button> 
 		<!--  <span class="separator">|</span> 
