--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
@@ -8,7 +8,7 @@
 		<span class="separator">|</span> 
 		<button id="userGuideLink" class="infoLinks button headerButton">Help</button>
 		<span class="separator">|</span> 
-		<button id="highlightsLink" class="infoLinks button headerButton">About</button> 
+		<button id="aboutLink" class="infoLinks button headerButton">About</button> 
 		<span class="separator">|</span> 
 		<button id="headerLogin" class="infoLinks login button headerButton">Login</button>
 	</div>
