Transition geocoding request service from Google to Nominatim (OSM).  Requests issued through jsonp ajax request.

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -96,9 +96,11 @@ zoom: 1;
     margin-top: 2px;
 }
 
-li.searchAttribution.ui-widget-content.ui-menu-divider {
+li.searchAttribution {
     border: medium none;
     margin: 0;
+    float: right;
+    margin-right: 5px;
 }
 
 #mapClearButton {
