--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -12,6 +12,7 @@
 <script src="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/Leaflet-coordinates-0.1.5/Leaflet.Coordinates-0.1.5.min.js"></script>
 <script src="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/esri-leaflet-2.0.0/dist/esri-leaflet-debug.js"></script>
 <script src="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/Leaflet-active-area-leaflet-1.0/leaflet.activearea.js"></script>
+<script src="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/leaflet-control-geocoder-1.5.3/dist/Control.Geocoder.js"></script>
 
 <link rel="stylesheet" href="resources/css/jquery-ui-ogpTheme.custom.css" type="text/css" />
 <link rel="stylesheet" href="resources/javascript/leaflet/leaflet_1.0.0-rc1/leaflet.css"/>
@@ -19,6 +20,7 @@
 <link rel="stylesheet" href="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/leaflet-history-master/leaflet-history-src.css" />
 <link rel="stylesheet" href="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/leaflet-zoomBox/L.Control.ZoomBox.css" />
 <link rel="stylesheet" href="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/Leaflet-coordinates-0.1.5/Leaflet.Coordinates-0.1.5.css" />
+<link rel="stylesheet" href="resources/javascript/leaflet/leaflet_1.0.0-rc1/plugins/leaflet-control-geocoder-1.5.3/dist/Control.Geocoder.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 <link rel="icon" type="image/png" href="../resources/media/ua_favicon-color.png" size="16x16">
 <link rel="icon" type="image/png" href="../resources/media/ua_favicon-color.png" size="32x32">
